tests/agl/rejections/scope/redeclare_same_scope.agl
let twice = 1
var twice = 2
